# jogo_analysis

./: .gitignore  README.md  best_players_query.sql  main.ipynb  main.py  pyproject.toml
