[project]
name = "jogo-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "PabloGoProg",email = "pgosorio13@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "seaborn (>=0.13.2,<0.14.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
